--- a/data/photocreatorframe/config.json
+++ b/data/photocreatorframe/config.json
@@ -2,36 +2,36 @@
   "type": 1,
   "native_ads_pos": 0,
   "native_ads_app_pos": 2,
-  "sticker": "res/template/text on photo/sticker/info.json",
-  "background": "res/template/text on photo/background/info.json",
+  "sticker": "res/template/photocreatorframe/sticker/info.json",
+  "background": "res/template/photocreatorframe/background/info.json",
   "am_ba": "",
   "am_in": "",
   "am_na": "",
-  "link": "data/text on photo/info.json",
+  "link": "data/photocreatorframe/info.json",
   "am_vi": "",
 "watch_video":600,
   "policy":"https://raw.githubusercontent.com/datapoli/privapoli/master/covmker/Privacy.html",
   "ads_app":"ads/ads.json",
   "slider": [
     {
-      "link": "data/text on photo/post17",
-      "thumb": "res/template/text on photo/thumbs/thumb_17.jpg"
+      "link": "data/photocreatorframe/post17",
+      "thumb": "res/template/photocreatorframe/thumbs/thumb_17.jpg"
     },
     {
-      "link": "data/text on photo/post18",
-      "thumb": "res/template/text on photo/thumbs/thumb_18.jpg"
+      "link": "data/photocreatorframe/post18",
+      "thumb": "res/template/photocreatorframe/thumbs/thumb_18.jpg"
     },
     {
-      "link": "data/text on photo/post21",
-      "thumb": "res/template/text on photo/thumbs/thumb_21.jpg"
+      "link": "data/photocreatorframe/post21",
+      "thumb": "res/template/photocreatorframe/thumbs/thumb_21.jpg"
     },
     {
-      "link": "data/text on photo/post22",
-      "thumb": "res/template/text on photo/thumbs/thumb_22.jpg"
+      "link": "data/photocreatorframe/post22",
+      "thumb": "res/template/photocreatorframe/thumbs/thumb_22.jpg"
     },
     {
-      "link": "data/text on photo/post23",
-      "thumb": "res/template/text on photo/thumbs/thumb_23.jpg"
+      "link": "data/photocreatorframe/post23",
+      "thumb": "res/template/photocreatorframe/thumbs/thumb_23.jpg"
     }
   ]
 }
