--- a/data/photocreatorframe/config.json
+++ b/data/photocreatorframe/config.json
@@ -15,23 +15,23 @@
   "slider": [
     {
       "link": "data/photocreatorframe/post20",
-      "thumb": "res/template/photocreatorframe/thumbs/20.jpg"
+      "thumb": "res/template/photocreatorframe/thumbs/20.png"
     },
     {
       "link": "data/photocreatorframe/post17",
-      "thumb": "res/template/photocreatorframe/thumbs/17.jpg"
+      "thumb": "res/template/photocreatorframe/thumbs/17.png"
     },
     {
       "link": "data/photocreatorframe/post22",
-      "thumb": "res/template/photocreatorframe/thumbs/22.jpg"
+      "thumb": "res/template/photocreatorframe/thumbs/22.png"
     },
     {
       "link": "data/photocreatorframe/post28",
-      "thumb": "res/template/photocreatorframe/thumbs/28.jpg"
+      "thumb": "res/template/photocreatorframe/thumbs/28.png"
     },
     {
       "link": "data/photocreatorframe/post30",
-      "thumb": "res/template/photocreatorframe/thumbs/30.jpg"
+      "thumb": "res/template/photocreatorframe/thumbs/30.png"
     }
   ]
 }
