--- a/data/photocreatorframe/config.json
+++ b/data/photocreatorframe/config.json
@@ -11,5 +11,6 @@
   "am_vi": "",
 "watch_video":600,
   "policy":"https://raw.githubusercontent.com/datapoli/privapoli/master/covmker/Privacy.html",
-  "ads_app":"ads/ads.json"
+  "ads_app":"ads/ads.json",
+  "slider": []
 }
