--- a/data/photocreatorframe/config.json
+++ b/data/photocreatorframe/config.json
@@ -6,6 +6,7 @@
   "background": "res/template/photocreatorframe/background/info.json",
   "am_ba": "ca-app-pub-3940256099942544/6300978111",
   "am_in": "ca-app-pub-3940256099942544/1033173712",
+  "am_home_in": "ca-app-pub-3940256099942544/1033173712",
   "am_na": "ca-app-pub-3940256099942544/2247696110",
   "link": "data/photocreatorframe/info.json",
   "am_vi": "ca-app-pub-3940256099942544/5224354917",
