--- a/data/templatemaker/config.json
+++ b/data/templatemaker/config.json
@@ -6,6 +6,7 @@
   "background": "res/template/templatemaker/background/info.json",
   "am_ba": "",
   "am_in": "",
+  "am_home_in": "",
   "am_na": "",
   "link": "data/templatemaker/info.json",
   "am_vi": "",
