--- a/data/photocreatorframe/config.json
+++ b/data/photocreatorframe/config.json
@@ -4,12 +4,13 @@
   "native_ads_app_pos": 2,
   "sticker": "res/template/photocreatorframe/sticker/info.json",
   "background": "res/template/photocreatorframe/background/info.json",
-  "am_ba": "ca-app-pub-3940256099942544/6300978111",
-  "am_in": "ca-app-pub-3940256099942544/1033173712",
-  "am_home_in": "ca-app-pub-3940256099942544/1033173712",
-  "am_na": "ca-app-pub-3940256099942544/2247696110",
+  "am_ba": "",
+  "am_in": "",
+  "am_home_in": "",
+  "am_na": "",
+  "am_vi": "",
+  
   "link": "data/photocreatorframe/info.json",
-  "am_vi": "ca-app-pub-3940256099942544/5224354917",
 "watch_video":600,
   "policy":"https://raw.githubusercontent.com/datapoli/privapoli/master/covmker/Privacy.html",
   "ads_app":"ads/ads.json",
